# task_manager

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
src/: cli.c  console.c  main.c  task.c  task_manager.c  util.c
src/include/: cli.h  common.h  console.h  main.h  task.h  task_manager.h  utils.h
